Added ambient audio to most passages

--- a/Beegin.html
+++ b/Beegin.html
@@ -761,8 +761,8 @@ if not stole the jelly: there no doctor here name that go away try the universit
 
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="23" name="GHF1" tags="" position="931,1234">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio goodFactory loop play&gt;&gt;\
+<tw-passagedata pid="23" name="GHF1" tags="" position="931,1234">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop play&gt;&gt;
 The GHF is a tall, imposing building, some parts of it almost reaching the top of the hive. 30 percent of the entire hive&#39;s supply is produced here, and it&#39;s not just honey - wax, nectar, pollen stores, even royal jelly - are all produced and/or housed here. While its fortunes have fallen in recent months, the GHF&#39;s stature, both in the community and in terms of literal physicality, continues to loom large.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;\
@@ -770,8 +770,8 @@ You boldly walk straight up to GHF, but are quickly turned away by security - an
 &lt;&lt;endif&gt;&gt;\
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="24" name="SHF1" tags="" position="527,1143">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio badFactory loop play&gt;&gt;\
+<tw-passagedata pid="24" name="SHF1" tags="" position="527,1143">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio badFactory loop play&gt;&gt;&lt;&lt;audio badFactory SFX loop play&gt;&gt;
 The SHF is a small, run-down building, some parts of it almost falling off the main structure. 60 percent of the entire hive&#39;s supply is produced here, and it&#39;s not just honey - it&#39;s also not all entirely legal. Since itJSDFHSDJKFSHDJK 
 its fortunes have fallen in recent months, the GHF&#39;s stature, both in the community and in terms of literal physicality, continues to loom large.
 JDKSGHSDJKFHSDKJF
@@ -802,7 +802,7 @@ Fetch quest to get keycard what the fuck ever.
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="25" name="Taxidermy" tags="" position="787,953">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="25" name="Taxidermy" tags="" position="787,953">&lt;&lt;stopallaudio&gt;&gt;
 Description.
 
 If you have no taxidermied items or Queen&#39;s Stinger, the shop owner ignores you, but simply starts collecting all the necessary ingredients for the taxidermy of, well, of a r-rather large specimen, honestly, it&#39;d almost be enough to taxidermy y-
@@ -840,7 +840,7 @@ taxidermied queen top (which gives you {half amount of Royal Jelly})
 or
 taxidermied queen bottom (which gives you queen&#39;s stinger).
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="26" name="Park" tags="" position="814,1378">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="26" name="Park" tags="" position="814,1378">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio parkSFX loop play&gt;&gt;
 Description.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -889,8 +889,8 @@ You used to love the park until your adult antennae made you all to aware of the
 
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="27" name="Bar" tags="" position="657,1142">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio bar loop play&gt;&gt;\
+<tw-passagedata pid="27" name="Bar" tags="" position="657,1142">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio bar loop play&gt;&gt;
 The End is DESCRIPTION THIS PLZ THX
 
 &lt;&lt;if (visited(&quot;GHF1&quot;) === 0 &amp;&amp; visited(&quot;SHF1&quot;) === 0) || !$barbeeWorking&gt;&gt;\
@@ -947,7 +947,7 @@ She snorts. &quot;Wow, no wonder you&#39;re wasting your time with me. You&#39;r
 &lt;/span&gt;\
 &lt;/span&gt;\
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
-<tw-passagedata pid="28" name="Dorm Entrance" tags="" position="658,1399">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="28" name="Dorm Entrance" tags="" position="658,1399">&lt;&lt;stopallaudio&gt;&gt;
 Description
 
 [[Room 1]]
@@ -982,7 +982,7 @@ Shady lookin motherfucker hanging outside. &quot;Hey chief, you look like you&#3
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="29" name="Abandoned Nightclub" tags="" position="945,1370">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="29" name="Abandoned Nightclub" tags="" position="945,1370">&lt;&lt;stopallaudio&gt;&gt;
 Description.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -995,7 +995,7 @@ You get noticed by a guard and must duck [[away|Sewer Exit]].
 
 Afterwards, reason to [[return|Sewer Exit]]
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="30" name="Derelict Housing" tags="" position="402,1228">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="30" name="Derelict Housing" tags="" position="402,1228">&lt;&lt;stopallaudio&gt;&gt;
 There were once many such housing developments on the outskirts of the hive. You were lucky enough to live in a nice place on the remote side of town, but places like this were definitely not bad places to live. The houses may have all been a little samey, but hey, they were built by a hivemind, whatdya expect. The houses still look samey, but now only by dint of all being terrible looking, each one looking dingier than the previous. You spot a couple poor souls, eking out a living, or at least a survival, among the ruins. They glance at you and huddle their few belongings more protectively, but otherwise heed you no mind. The least you can do is show them same grim courtesy.
 
 ***Search for something useful***
@@ -1019,8 +1019,8 @@ The chest is made up from solid honeycomb, with beautiful wax detailing. You try
 [[Ignore it]]
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="31" name="Chapel" tags="" position="525,1404">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio chapel loop play&gt;&gt;\
+<tw-passagedata pid="31" name="Chapel" tags="" position="525,1404">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio chapelSFX play&gt;&gt;
+&lt;&lt;audio chapel loop play&gt;&gt;
 Description
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -1028,8 +1028,8 @@ nothing to see here
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="32" name="Palace Entrance" tags="" position="830,1554">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio palace loop play&gt;&gt;\
+<tw-passagedata pid="32" name="Palace Entrance" tags="" position="830,1554">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio palace loop play&gt;&gt;
 Description
 
 &lt;&lt;if visited() === 1&gt;&gt;
@@ -1068,8 +1068,8 @@ You can go back in the Sewers if you really want, or sneak into the back entranc
 [[Sewer]]
 [[GHF3]]
 [[Abandoned Nightclub]]</tw-passagedata>
-<tw-passagedata pid="34" name="Sewer" tags="" position="1271,998">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio sewers loop play&gt;&gt;\
+<tw-passagedata pid="34" name="Sewer" tags="" position="1271,998">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio sewers loop play&gt;&gt;&lt;&lt;audio sewerSFX loop play&gt;&gt;
 if have sewer book:
 you skillfully navigate the sewers, and quickly find the [[exit|Sewer Exit]].
 
@@ -1082,7 +1082,7 @@ click right at any time, run into dead end, can backtrack.
 turn left 5 times, get to exit
 
 [[Exit the sewers!|Sewer Exit]]</tw-passagedata>
-<tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="35" name="Sewer Entrance (Bar)" tags="" position="657,1025">&lt;&lt;stopallaudio&gt;&gt;
 Only becomes visible after successful talking to factory worker
 
 First time:
@@ -1094,8 +1094,8 @@ You&#39;re back at the sewer entrance. The now-familiar smell wafts faintly up t
 Climb down into the [[sewers|Sewer]].
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="36" name="Jail" tags="" position="658,1524">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio jail loop play&gt;&gt;\
+<tw-passagedata pid="36" name="Jail" tags="" position="658,1524">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio jail loop play&gt;&gt;
 Description
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -1117,7 +1117,8 @@ Okay, youre gonna break into a jail. No probs. You can do this. You can //tooooo
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="37" name="School" tags="" position="653,1267">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="37" name="School" tags="" position="653,1267">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio schoolSFX loop play&gt;&gt;
 Description
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
@@ -1146,8 +1147,8 @@ Option 2.5 (overwrites Option 2 if you know {Plottenpoints first name}: I&#39;m 
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="38" name="Larva Ward" tags="" position="1073,1086">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;if visited(&quot;Supply Closet&quot;) === 0&gt;&gt;\
+<tw-passagedata pid="38" name="Larva Ward" tags="" position="1073,1086">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;if visited(&quot;Supply Closet&quot;) === 0&gt;&gt;
 You careen into the larva ward, trying to escape the unnerving experience you just had. Before, this whole wing would have been bustling with activity and life. Now, just a few dozen larva lay in front of you, a far cry from yesteryear. There are still a couple tired-looking nurses on duty watching the young ones, but no one seems to be keeping an eye on the nearby [[Supply Closet]].
 &lt;&lt;else&gt;&gt;\
 You duck back outside into the main ward just as a janitor comes by and enters the closet. She comes out moments later, &lt;&lt;if $steal&gt;&gt;shaking her head regretfully, &lt;&lt;endif&gt;&gt;and locks the door behind her. Welp, you&#39;re probably not getting back in there any time soon. Might as well return to the [[Hospital Lobby]].&lt;&lt;endif&gt;&gt;\
@@ -1158,8 +1159,8 @@ You may taxidermy a larva. Sicko. If you do, get {taxidermied larva}.
 &lt;&lt;if $warpTimes === 2&gt;&gt;\
 caught by police, taken to [[Jail|Jail Cell]] 
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
-<tw-passagedata pid="39" name="Supply Closet" tags="" position="1085,842">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;span id=&quot;description&quot;&gt;\
+<tw-passagedata pid="39" name="Supply Closet" tags="" position="1085,842">&lt;&lt;stopallaudio&gt;&gt;
+&lt;span id=&quot;description&quot;&gt;
 You sneak into the unlocked supply closet, and find a stash of royal jelly that&#39;s probably next due for the larva just outside the door. Supplies are running low these days, and have been for a while, but you can probably steal about half of what you&#39;ll need, and there still might be enough left over for a couple larva. For about a week. Maybe.
 &lt;/span&gt;
 &lt;&lt;nobr&gt;&gt;
@@ -1206,7 +1207,7 @@ You sneak into the unlocked supply closet, and find a stash of royal jelly that&
 [[Jail]]
 [[Taxidermy]] </tw-passagedata>
 <tw-passagedata pid="41" name="GHF3" tags="" position="1092,1245">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio goodFactory loop play&gt;&gt;\
+&lt;&lt;audio goodFactory loop play&gt;&gt;&lt;&lt;audio goodFactorySFX loop play&gt;&gt;
 You sneak in, have some adventures and dialogue choices or something, and steal some dank herb i mean royal jelly
 
 some dank jelly
@@ -1233,11 +1234,11 @@ This passage is put into the bottom of every passage where it&#39;s possible to 
 
 You have enough jelly, and it sounds like the parade is just starting! Quick, you must get to the [[palace|Palace Side]] right away!
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
-<tw-passagedata pid="47" name="Estuary" tags="" position="914,794">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="47" name="Estuary" tags="" position="914,793">&lt;&lt;stopallaudio&gt;&gt;
 You head towards the Hexagon, mind reeling. Is this a side effect of time travel, that once you leave someone&#39;s sight, they forget you were ever there? Has everyone forgot about you completely, or is it more like an object permanence thing? &lt;&lt;if $steal&gt;&gt;Moreover, you kinda just did the most stingerish thing you&#39;ve ever done in your entire life. You tell yourself it was a necessary evil for the good of the whole hive. You&#39;re almost disgusted with yourself that the platitude actually works. Almost.&lt;&lt;else&gt;&gt;Well, at least you didn&#39;t steal candy from literal babies. But you can&#39;t have too much pride in your morals - what if you aren&#39;t able to get enough royal jelly now? You shake your head. You&#39;re just going to have to try.&lt;&lt;endif&gt;&gt;
 
 You wander in a daze until you end up back in Pioneer Hexagon. Well, time to get to [[work|Main Plaza]] </tw-passagedata>
-<tw-passagedata pid="48" name="StoryInit" tags="" position="715,5">// Vars
+<tw-passagedata pid="48" name="StoryInit" tags="" position="715,4">// Vars
 &lt;&lt;set $warpTimes = 0&gt;&gt;
 &lt;&lt;set $barbeeWorking = true&gt;&gt;
 
@@ -1263,7 +1264,13 @@ You wander in a daze until you end up back in Pioneer Hexagon. Well, time to get
 &lt;&lt;cacheaudio &quot;bee2&quot; &quot;http://jeffbricemusic.com/music/beegin/bee2.mp3&quot;&gt;&gt;
 &lt;&lt;cacheaudio &quot;bee3&quot; &quot;http://jeffbricemusic.com/music/beegin/bee3.mp3&quot;&gt;&gt;
 &lt;&lt;cacheaudio &quot;bee4&quot; &quot;http://jeffbricemusic.com/music/beegin/bee4.mp3&quot;&gt;&gt;
-&lt;&lt;cacheaudio &quot;hit1&quot; &quot;http://jeffbricemusic.com/music/beegin/hit1.mp3&quot;&gt;&gt;</tw-passagedata>
+&lt;&lt;cacheaudio &quot;hit1&quot; &quot;http://jeffbricemusic.com/music/beegin/hit1.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;chapelSFX&quot; &quot;http://jeffbricemusic.com/music/beegin/chapelSFX.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;badFactorySFX&quot; &quot;http://jeffbricemusic.com/music/beegin/badFactorySFX.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;goodFactorySFX&quot; &quot;http://jeffbricemusic.com/music/beegin/goodFactorySFX.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;schoolSFX&quot; &quot;http://jeffbricemusic.com/music/beegin/schoolSFX.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;parkSFX&quot; &quot;http://jeffbricemusic.com/music/beegin/parkSFX.mp3&quot;&gt;&gt;
+&lt;&lt;cacheaudio &quot;sewerSFX&quot; &quot;http://jeffbricemusic.com/music/beegin/sewerSFX.mp3&quot;&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="49" name="Jail Cell" tags="" position="655,1667">&lt;&lt;if previous() == &quot;Larva Ward&quot;&gt;&gt;
 &lt;&lt;set $chekov = true&gt;&gt;
 interactions, free yourself, find out about {Chekov Plottenpoint&#39;s first name}, head back to [[Main Plaza]] 
@@ -1271,7 +1278,8 @@ interactions, free yourself, find out about {Chekov Plottenpoint&#39;s first nam
 &lt;&lt;set $royalJelly += 1&gt;&gt;
 interactions, free yourself, get {stolen Royal Jelly}, head back to [[Main Plaza]] 
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="50" name="Lab" tags="" position="528,1271">&lt;&lt;stopallaudio&gt;&gt;\
+<tw-passagedata pid="50" name="Lab" tags="" position="528,1271">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio jail loop volume 0.2 play&gt;&gt;
 Dr. Plottenpoint is here, you explain situation. She’s intrigued but very busy. She’ll help you, but only if you perform a very unsavory task for her - get her lout of an ex sick out of her mind so she won’t be able to go to the bar for at least a month. She gives you {concoction}.&lt;&lt;set $concoction = true&gt;&gt; Her ex works at the SHF.
 
 &lt;&lt;if $poisonedEx&gt;&gt;\
@@ -1280,8 +1288,8 @@ Dr. Plottenpoint tells you she’ll do her best, but she need at least a week of
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
 <tw-passagedata pid="51" name="Note on ***" tags="" position="588,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See disease for example of this
 </tw-passagedata>
-<tw-passagedata pid="52" name="karaoke room2" tags="" position="514,1014">&lt;&lt;stopallaudio&gt;&gt;\
-&lt;&lt;audio karaoke play&gt;&gt;\
+<tw-passagedata pid="52" name="karaoke room2" tags="" position="514,1014">&lt;&lt;stopallaudio&gt;&gt;
+&lt;&lt;audio karaoke play&gt;&gt;
 &lt;&lt;set $musicWords = [&quot;interesting&quot;, &quot;intriguing&quot;, &quot;engaging&quot;, &quot;cinematic&quot;]&gt;&gt;\
 &lt;&lt;set $currentIndex = 0&gt;&gt;\
 moozak
@@ -1448,6 +1456,8 @@ MAKE THIS SHIT CLICKY AND INTERACTIVE N SHIT
 
 
 </tw-passagedata>
+<tw-passagedata pid="64" name="Fulfill End" tags="" position="687,2160">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio fulfillend loop play&gt;&gt;</tw-passagedata>
+<tw-passagedata pid="65" name="Break End" tags="" position="855,2157">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio breakend loop play&gt;&gt;</tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
