Fixed a volume issue with dance.mp3

--- a/Beegin.html
+++ b/Beegin.html
@@ -638,7 +638,7 @@ Just, choose accept, okay? The writing in the rest of this game is slightly bett
 
 [[Start over|Beegin+End]]</tw-passagedata>
 <tw-passagedata pid="18" name="Warp" tags="" position="74,924">&lt;&lt;stopallaudio&gt;&gt;
-&lt;&lt;audio dance loop play&gt;&gt;
+&lt;&lt;audio dance loop volume 0.6 play&gt;&gt;
 &lt;span id=&quot;dance&quot;&gt;\
 &lt;&lt;if $warpTimes === 1&gt;&gt;\
 As you perform the dance, the Granite Rose glows stronger and stronger until all you can see is the sacred purple light. As the dance continues, your body seemingly moving unbidden from your mind&#39;s instructions, the glow turns dark, until it seems to be radiating the very absence of light. The void... the void is calling. No, not calling. Singing. The void is singing and you must answer it with a dance.
@@ -650,17 +650,17 @@ Things are similar but bad in a writerly way that makes the reader cry at the sh
 As you dance, you lose all your \
 &lt;&lt;click &quot;senses&quot;&gt;&gt;
 &lt;&lt;replace &quot;#dance&quot;&gt;&gt;
-	&lt;&lt;audio dance volume 0.8&gt;&gt;
+	&lt;&lt;audio dance volume 0.4&gt;&gt;
 	&lt;&lt;click &quot;eventually&quot;&gt;&gt;
 	&lt;&lt;replace &quot;#dance&quot;&gt;&gt;
 		&lt;&lt;click &quot;even&quot;&gt;&gt;
 		&lt;&lt;audio dance volume 0.6&gt;&gt;
 		&lt;&lt;replace &quot;#dance&quot;&gt;&gt;
 			&lt;&lt;click &quot;your&quot;&gt;&gt;
-			&lt;&lt;audio dance volume 0.4&gt;&gt;
+			&lt;&lt;audio dance volume 0.8&gt;&gt;
 			&lt;&lt;replace &quot;#dance&quot;&gt;&gt;
 				&lt;&lt;click &quot;sense&quot;&gt;&gt;
-				&lt;&lt;audio dance volume 0.2&gt;&gt;
+				&lt;&lt;audio dance volume 1.0&gt;&gt;
 				&lt;&lt;replace &quot;#dance&quot;&gt;&gt;
 					&lt;&lt;click &quot;of&quot;&gt;&gt;
 					&lt;&lt;audio dance volume 0.0&gt;&gt;
