--- a/Beegin.html
+++ b/Beegin.html
@@ -408,7 +408,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -472,7 +474,7 @@ Good. You stayed on because you convinced yourself you were doing good.&lt;span 
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
 &lt;&lt;click &quot;You were easing pain.&quot;&gt;&gt;
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
-&lt;&lt;click &quot;You were doing //something//.&quot;&gt;&gt;
+&lt;&lt;click &quot;You were doing SOMETHING.&quot;&gt;&gt;
 &lt;&lt;replace &quot;#saving&quot;&gt;&gt;
 You were doing &lt;&lt;click &quot;nothing&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;nothing&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;.\
 &lt;&lt;/replace&gt;&gt;\
@@ -512,15 +514,15 @@ It has [[little effect]].</tw-passagedata>
 You pump at her chest, but not in a sexy way. Now would not be an appropriate time.
 
 It has [[little effect]].</tw-passagedata>
-<tw-passagedata pid="7" name="0QX3" tags="" position="450.0001,469">&lt;&lt;stopallaudio&gt;&gt;
+<tw-passagedata pid="7" name="0QX3" tags="" position="450,469">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio heart3 loop volume 0.4 play&gt;&gt;
 &lt;&lt;audio bee3 loop volume 0.5 play&gt;&gt;
 You attempt to sterilize the wound. You ask if any of the drones have any antibiotics on them. No, of course they don&#39;t. Why would a standing military have any medical supplies on them, especially after the latest round of emergency budget cuts? Fucking typical. You sigh, reach into your trenchcoat pocket, and take out the only cleaning agent readily available - a full flask of Bee Pun Vodka.
 
-You dramatically uncork the flask and pour the clear, stinging liquid directly onto the wound (i.e. her goddamn //blood-spewing mouth///) like a fucking champion. Everyone is very impressed.
+You dramatically uncork the flask and pour the clear, stinging liquid directly onto the wound (i.e. her goddamn //blood-spewing mouth//) like a fucking champion. Everyone is very impressed.
 
 It has [[little effect]].</tw-passagedata>
-<tw-passagedata pid="8" name="0QX4" tags="" position="575.0002999999999,469">&lt;&lt;stopallaudio&gt;&gt;
+<tw-passagedata pid="8" name="0QX4" tags="" position="575,469">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio heart3 loop volume 0.4 play&gt;&gt;
 &lt;&lt;audio bee3 loop volume 0.5 play&gt;&gt;
 You try to help, but you are frozen in fear.
@@ -540,12 +542,12 @@ She is dying. There is nothing you can do to stop it. Coughing blood and assorte
 [[Respond warmly|0QR2]]
 [[Respond cruelly|0QR3]]
 [[Don&#39;t respond|0QR4]]</tw-passagedata>
-<tw-passagedata pid="11" name="0QR1" tags="" position="201.0001,594">&lt;&lt;stopallaudio&gt;&gt;
+<tw-passagedata pid="11" name="0QR1" tags="" position="201,594">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio hit1 unloop play&gt;&gt;
 You say something deferential but meaningless. She dies with a distant look on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
-<tw-passagedata pid="12" name="0QR2" tags="" position="326.0001,599">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio hit1 unloop play&gt;&gt;
+<tw-passagedata pid="12" name="0QR2" tags="" position="326,599">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio hit1 unloop play&gt;&gt;
 You say something warm but trite. She dies with a pained smile on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
-<tw-passagedata pid="13" name="0QR3" tags="" position="451.0002999999999,594">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio hit1 unloop play&gt;&gt;
+<tw-passagedata pid="13" name="0QR3" tags="" position="451,594">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio hit1 unloop play&gt;&gt;
 You say something cruel but true. She dies with a sad look on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
 <tw-passagedata pid="14" name="0QR4" tags="" position="577,599">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio hit1 unloop play&gt;&gt;
 You look her in the eyes and say nothing at all. She dies with a look of fear on her face. A wizened hand is placed on your shoulder. &quot;The Queen is dead,&quot; says a creaky, bitter voice. &quot;[[Long live the Queen]].&quot;</tw-passagedata>
@@ -573,7 +575,7 @@ She chuckles darkly. &quot;I&#39;m absolutely sure it is. Now, we must hurry alo
 
 &lt;&lt;click &quot;\&quot;Like, backwards into a wall? Seems like not a great weapon.\&quot;&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;backwards&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;
 &lt;/span&gt;&lt;span id=&quot;backwards&quot; style=&quot;display:none&quot;&gt;
-&quot;No, //not// &#39;like backwards into a wall&#39;! Backwards through time! Have you not been picking up on any of the clues I&#39;ve been dropping? Beesus Lord Almighty I swear sometimes...&quot;
+&quot;No, //not//  &#39;like backwards into a wall&#39;! Backwards through time! Have you not been picking up on any of the clues I&#39;ve been dropping? Beesus Lord Almighty I swear sometimes...&quot;
 
 &lt;&lt;click &quot;\&quot;That&#39;s possible??\&quot;&quot;&gt;&gt;&lt;&lt;set document.getElementById(&quot;possible&quot;).style.display=&quot;&quot;&gt;&gt;&lt;&lt;/click&gt;&gt;
 &lt;/span&gt;&lt;span id=&quot;possible&quot; style=&quot;display:none&quot;&gt;
@@ -1188,7 +1190,7 @@ You sneak into the unlocked supply closet, and find a stash of royal jelly that&
 &lt;/span&gt;
 &lt;&lt;/nobr&gt;&gt;
 </tw-passagedata>
-<tw-passagedata pid="40" name="Directional Map" tags="" position="785,1232">This goes in passages that can be used to visit the other main passages. All passages are marked as such. Eventually it will become a visual map.
+<tw-passagedata pid="40" name="Directional Map" tags="" position="785,1233">
 
 [[Main Plaza]]
 [[Go to Good Honey Factory|GHF1]]
@@ -1236,7 +1238,7 @@ You have enough jelly, and it sounds like the parade is just starting! Quick, yo
 <tw-passagedata pid="47" name="Estuary" tags="" position="914,794">&lt;&lt;stopallaudio&gt;&gt;\
 You head towards the Hexagon, mind reeling. Is this a side effect of time travel, that once you leave someone&#39;s sight, they forget you were ever there? Has everyone forgot about you completely, or is it more like an object permanence thing? &lt;&lt;if $steal&gt;&gt;Moreover, you kinda just did the most stingerish thing you&#39;ve ever done in your entire life. You tell yourself it was a necessary evil for the good of the whole hive. You&#39;re almost disgusted with yourself that the platitude actually works. Almost.&lt;&lt;else&gt;&gt;Well, at least you didn&#39;t steal candy from literal babies. But you can&#39;t have too much pride in your morals - what if you aren&#39;t able to get enough royal jelly now? You shake your head. You&#39;re just going to have to try.&lt;&lt;endif&gt;&gt;
 
-You wander in a daze until you end up back in Pioneer Hexagon. Well, time to get to [[work|Main Plaza]] </tw-passagedata>
+You wander in a daze until you end up back in Pioneer Hexagon. Well, time to get to [[work|Main Plaza]].</tw-passagedata>
 <tw-passagedata pid="48" name="StoryInit" tags="" position="715,5">// Vars
 &lt;&lt;set $warpTimes = 0&gt;&gt;
 &lt;&lt;set $barbeeWorking = true&gt;&gt;
